# ATJ227X_firmware_tools

./: .gitignore  CMakeLists.txt  Makefile  README.md  atj_tables.h  atjboottool.c  fwu.c  fwu.h  misc.h
